Fixed overlapping of pagination somewhat

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,3 +42,6 @@ tr.hover {
    cursor: pointer;
    /* whatever other hover styles you want */
 }
+.dataTables_wrapper .dataTables_paginate .paginate_button{
+	padding: 0;
+}
